# wireshAIrk

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  PoC.sh  README.md  pyproject.toml
src/dataset/: dataset.py
src/lib/: clean_raw_data.py
src/llm_eval/: llm_eval.py
src/scraper/: scraper.py
src/wireshairk/: __about__.py  __init__.py  __main__.py
tests/scraper/: scraper_test.py
