[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wireshairk"
dynamic = ["version"]
description = 'Use of LLMs to provide explainability of network traces network'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "puchy22", email = "rubendltv22@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["requests", "bs4", "pyshark", "click", "pre-commit", "plotly", "pandas", "kaleido"]

[project.urls]
Documentation = "https://github.com/puchy22/wireshairk#readme"
Issues = "https://github.com/puchy22/wireshairk/issues"
Source = "https://github.com/puchy22/wireshairk"

[tool.hatch.version]
path = "src/wireshairk/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/wireshairk tests}"

[tool.coverage.run]
source_pkgs = ["wireshairk", "tests"]
branch = true
parallel = true
omit = [
  "src/wireshairk/__about__.py",
]

[tool.coverage.paths]
wireshairk = ["src/wireshairk", "*/wireshairk/src/wireshairk"]
tests = ["tests", "*/wireshairk/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
